--- a/package.json
+++ b/package.json
@@ -39,55 +39,60 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "9.1.0",
-    "@angular-devkit/build-angular": "0.901.1",
+    "@angular-devkit/build-angular": "0.901.5",
     "@angular-eslint/builder": "0.0.1-alpha.18",
-    "@angular/cli": "9.1.1",
-    "@angular/common": "9.1.1",
-    "@angular/compiler": "9.1.1",
-    "@angular/compiler-cli": "9.1.1",
-    "@angular/core": "9.1.1",
-    "@angular/forms": "9.1.1",
-    "@angular/language-service": "9.1.1",
-    "@angular/platform-browser": "9.1.1",
-    "@angular/platform-browser-dynamic": "9.1.1",
-    "@angular/router": "9.1.1",
+    "@angular/cli": "9.1.5",
+    "@angular/common": "9.1.6",
+    "@angular/compiler": "9.1.6",
+    "@angular/compiler-cli": "9.1.6",
+    "@angular/core": "9.1.6",
+    "@angular/forms": "9.1.6",
+    "@angular/language-service": "9.1.6",
+    "@angular/platform-browser": "9.1.6",
+    "@angular/platform-browser-dynamic": "9.1.6",
+    "@angular/router": "9.1.6",
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
     "@types/jasmine": "3.5.10",
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "7.0.2",
-    "@types/node": "12.11.1",
-    "@typescript-eslint/eslint-plugin": "2.27.0",
-    "@typescript-eslint/parser": "2.27.0",
+    "@types/node": "12.12.6",
+    "@typescript-eslint/eslint-plugin": "2.31.0",
+    "@typescript-eslint/parser": "2.31.0",
     "chai": "4.2.0",
     "codelyzer": "5.2.2",
-    "conventional-changelog-cli": "2.0.32",
+    "conventional-changelog-cli": "2.0.34",
     "core-js": "3.6.5",
     "cross-env": "7.0.2",
-    "electron": "8.2.1",
-    "electron-builder": "22.4.1",
+    "electron": "8.2.5",
+    "electron-builder": "22.6.0",
     "electron-reload": "1.5.0",
-    "eslint": "6.8.0",
+    "eslint": "7.0.0",
     "eslint-plugin-import": "2.20.2",
     "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "5.0.1",
-    "karma": "5.0.1",
-    "karma-coverage-istanbul-reporter": "2.1.1",
+    "jasmine-spec-reporter": "5.0.2",
+    "karma": "5.0.5",
+    "karma-coverage-istanbul-reporter": "3.0.2",
     "karma-electron": "6.3.0",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.3",
-    "mocha": "7.1.1",
+    "mocha": "7.1.2",
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.5",
     "spectron": "10.0.1",
-    "tslib": "1.11.1",
-    "ts-node": "8.8.2",
+    "ts-node": "8.10.1",
+    "tslib": "1.11.2",
     "typescript": "3.8.3",
-    "wait-on": "4.0.2",
+    "wait-on": "5.0.0",
     "webdriver-manager": "12.1.7",
     "zone.js": "0.10.3"
   },
   "engines": {
     "node": ">=10.13.0"
+  },
+  "dependencies": {
+    "@angular/animations": "9.1.6",
+    "@angular/cdk": "9.2.3",
+    "@angular/material": "9.2.3"
   }
 }
